--- a/style.css
+++ b/style.css
@@ -5,3 +5,177 @@
   --red-theme: #ff6868;
   --blue-theme: #00b7f1;
 }
+
+html {
+  margin: 0px;
+  padding: 0px;
+  font-family: "Roboto", Tahoma, sans-serif;
+}
+
+/* ================= header section start =================== */
+header {
+  width: 100%;
+  height: 150px;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  background: white;
+  display: flex;
+  flex-direction: column;
+  z-index: 3000;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+}
+
+.container {
+  width: 70%;
+  margin: auto;
+}
+
+/* 1 - ============ Header line one ============== */
+header .header-line-one {
+  width: 100%;
+  height: 50px;
+  background-color: var(--green-theme);
+  color: white;
+}
+
+header .header-line-one .container,
+header .header-line-two .container {
+  height: 50px;
+  /* même chose */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header .header-line-one .container .login-logout {
+  width: 20%;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header .header-line-one .container .login-logout img {
+  width: 10px;
+  height: 7px;
+}
+
+header .header-line-one .container .login-logout .vertical-bar {
+  width: 2px;
+  height: 20px;
+  background-color: white;
+}
+
+/* 2 - ============ Header line two ============== */
+header .header-line-two {
+  width: 100%;
+  height: 50px;
+  background-color: white;
+}
+
+header .header-line-two .container .logo-name,
+header .header-line-two .container .bar-notif-profile {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 8%;
+}
+
+header .header-line-two .container .logo-name p {
+  color: black;
+  font-weight: 700;
+  font-size: 1.2rem;
+  margin-left: 10px;
+}
+
+header .header-line-two .container .Search-bar-form {
+  width: 50%;
+  height: 15px;
+  display: flex;
+  background-color: white;
+  flex-direction: row;
+  align-items: center;
+}
+
+header .header-line-two .container .Search-bar-form input[type="text"] {
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid var(--green-theme);
+  float: left;
+  width: 90%;
+  background: #f1f1f1;
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+}
+
+header .header-line-two .container .Search-bar-form button {
+  float: left;
+  width: 10%;
+  padding: 10px;
+  background: var(--green-theme);
+  color: white;
+  font-size: 17px;
+  border: 1px solid var(--green-theme);
+  border-left: none; /* Prevent double borders */
+  cursor: pointer;
+
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+/* 3 - ============ Header line three ============== */
+header .header-line-three {
+  width: 100%;
+  height: 50px;
+  background-color: white;
+}
+
+header .header-line-three .container {
+  display: flex;
+  flex-direction: row;
+}
+
+header .header-line-three .container .navbar,
+header .header-line-three .container .all-collections {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header .header-line-three .container .all-collections {
+  background: var(--green-theme);
+  color: white;
+  width: 15%;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+header .header-line-three .container .navbar {
+  width: 50%;
+  margin-left: 85px;
+}
+
+header .header-line-three .container .navbar a {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 700;
+  color: black;
+}
+
+header .header-line-three .container .navbar a:hover {
+  color: var(--green-theme);
+  letter-spacing: 2px;
+}
+
+header .header-line-three .container .all-collections .all-collections-paraph {
+  font-weight: 700;
+}
+/* ================= header section end =================== */
+
+/* ================= Home section ===========================*/
